--- a/_posts/2016-10-26-al-aire.md
+++ b/_posts/2016-10-26-al-aire.md
@@ -1,6 +1,14 @@
 ---
 layout: post
-title: Al aire!
+title: "¡Al aire!"
+tags:
 ---
+¡Bienvenido!
 
-Este es el primer artículo.
+Mi nombre es Ernesto Blanco, pero Bueno, si quieres saber algo sobre mí, para ello ya está el apartado de Acerca.
+
+Este pequeño rincón pretende ser un recopilatorio de mis diferentes experiencias en el ámbito del desarrollo, y sobre todo en el trabajo del desarrollo accessible.
+
+Pretendo que lo que publique aquí pueda ser de ayuda para alguien, pero sobre todo, pretend que lo que vaya publicando me sirvan de apuntes para no olvidar cosas importantes.
+
+Pues nada, ¡a lo que viene!
